--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Drink It!</title>
+    <meta name="description" content="Nunca mais se esqueça de beber água, atinja sua meta diária com Drink It!">
 
     <base href="/" />
 
@@ -20,6 +21,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/mask-icon.png" color="#ffffff">
+    <meta name="theme-color" content="#ffffff">
   </head>
 
   <body>
